# nix-homebrew

./: README.md  configuration.nix  flake.nix  home.nix  migrate_brew.md  result
nix/darwin/: configuration.nix  default.nix  macos.nix  nix.nix  users.nix
nix/home/: base.nix  kazukishinohara.nix  packages.nix  programs.nix
templates/cabal/: README.md  flake.nix  my-app.cabal
templates/cabal/src/: Lib.hs
templates/cabal/test/: Spec.hs
templates/dev-shell/: README.md  flake.nix
templates/haskell/: README.md  flake.nix
templates/stack/: README.md  flake.nix  my-stack-app.cabal  package.yaml  stack.yaml
templates/stack/.stack-work/: stack.sqlite3
templates/stack/src/: Main.hs
templates/stack/test/: Spec.hs
