cabal-version:      2.4
name:               my-app
version:            0.1.0.0
license:            BSD-3-Clause
build-type:         Simple

library
  exposed-modules:  Lib
  hs-source-dirs:   src
  build-depends:    base >= 4.14 && < 5
  default-language: Haskell2010

executable my-app
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base >= 4.14 && < 5, my-app
  ghc-options:      -Wall
  default-language: Haskell2010

test-suite my-app-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base >= 4.14 && < 5, my-app
  ghc-options:      -Wall
  default-language: Haskell2010
